--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -31,6 +31,7 @@
 <!ENTITY Ctr_tabs2			"Zakulacené panely (alternativní)">
 <!ENTITY Ctr_tabs3			"Zakulacené panely (alternativní Aero)">
 <!ENTITY Ctr_tabforminfo	"Vzhled panelů je určen současným motivem vzhledu.">
+<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"Panely navrchu (výchozí)">
 <!ENTITY Ctr_tabsontop1		"Panely navrchu --- nastaveno [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Panely pod adresním řádkem (v1) --- nastaveno [tabsontop=false]">
@@ -128,6 +129,8 @@
 <!ENTITY Ctr_cpanelmenus	"Nabídky panelů: kompaktní zobrazení (záložky, historie atd.)">
 <!ENTITY Ctr_hidezoomres	"Přiblížit prvky na liště: skrýt tlačítko pro obnovení lupy">
 <!ENTITY Ctr_alt_newtabp	"New tab page: alternative appearance">
+<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
+<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_noresizerxp	"Hide Resizer (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Open additional location bar (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Tlačítko nabídky: skrýt texty u ikon">
