--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -31,6 +31,7 @@
 <!ENTITY Ctr_tabs2			"Вигнуті вкладки (альтернативні)">
 <!ENTITY Ctr_tabs3			"Вигнуті вкладки (альтернативні Aero)">
 <!ENTITY Ctr_tabforminfo	"Вигляд вкладки контролюється поточною темою.">
+<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"Вкладки нагорі (типово)">
 <!ENTITY Ctr_tabsontop1		"Вкладки нагорі --- встановлено [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Вкладки не нагорі (v1) --- встановлено [tabsontop=false]">
@@ -128,6 +129,8 @@
 <!ENTITY Ctr_cpanelmenus	"Панель меню: компактний вигляд (закладки, історія тощо)">
 <!ENTITY Ctr_hidezoomres	"Управління масштабом на панелі: приховати кнопку скидання масштабу">
 <!ENTITY Ctr_alt_newtabp	"Сторінка нової вкладки: альтернативний вигляд">
+<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
+<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_noresizerxp	"Приховати «Індикатор зміни розміру» (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Відкрити додаткову панель адреси (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Спливаюче вікно панелі меню: приховати написи на кнопках">
