--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -31,6 +31,7 @@
 <!ENTITY Ctr_tabs2			"弧形标签页 (备选风格)">
 <!ENTITY Ctr_tabs3			"弧形标签页 (备选 Aero 风格)">
 <!ENTITY Ctr_tabforminfo	"标签页外观由当前的主题所控制">
+<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认)">
 <!ENTITY Ctr_tabsontop1		"标签栏在顶部 --- [tabsontop=true] 属性">
 <!ENTITY Ctr_tabsontop2		"标签栏不在顶部 (v1) --- [tabsontop=false] 属性">
@@ -128,6 +129,8 @@
 <!ENTITY Ctr_cpanelmenus	"面板菜单: 更紧凑的视图 (书签、历史等等)">
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面: 备选的外观">
+<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
+<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_noresizerxp	"隐藏调整大小控件 (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"打开附加地址栏(Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签文本">
