--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -31,6 +31,7 @@
 <!ENTITY Ctr_tabs2			"Afrundede faneblade (alternativ)">
 <!ENTITY Ctr_tabs3			"Afrundede faneblade (alternativ Aero)">
 <!ENTITY Ctr_tabforminfo	"Fanebladenes udseende styres af det aktuelle tema.">
+<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"Faneblade øverst (standard)">
 <!ENTITY Ctr_tabsontop1		"Faneblade øverst --- [tabsontop=true] attribut">
 <!ENTITY Ctr_tabsontop2		"Faneblade skal ikke være øverst (v1) --- [tabsontop=false] attribut">
@@ -128,6 +129,8 @@
 <!ENTITY Ctr_cpanelmenus	"Panelmenuer: kompakt visning (bogmærker, historik, osv.)">
 <!ENTITY Ctr_hidezoomres	"Zoom knapper på værktøjslinje: skjul zoom-nulstil knapper">
 <!ENTITY Ctr_alt_newtabp	"Nyt faneblad side: alternativt udseende">
+<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
+<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_noresizerxp	"Hide Resizer (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Open additional location bar (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Panelmenu popup: skjul mærkater på knapper">
