--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -31,6 +31,7 @@
 <!ENTITY Ctr_tabs2			"Abas Arredondadas (Alternativas)">
 <!ENTITY Ctr_tabs3			"Abas Arredondadas (Alternativas Aero)">
 <!ENTITY Ctr_tabforminfo	"A Aparência da Aba é controlada pelo Tema atual.">
+<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
 <!ENTITY Ctr_tabsontop0		"Abas no Topo (Padrão)">
 <!ENTITY Ctr_tabsontop1		"Abas no Topo --- Definida [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Abas Embaixo (v1) --- Definida [tabsontop=false]">
@@ -128,6 +129,8 @@
 <!ENTITY Ctr_cpanelmenus	"Menus do Painel Compacto (Favoritos, Histórico, etc.)">
 <!ENTITY Ctr_hidezoomres	"Controles de Ampliação na Barra de Ferramentas: Ocultar o Botão Redefinir Ampliação">
 <!ENTITY Ctr_alt_newtabp	"Página Nova Aba: Aparência Alternativa">
+<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
+<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_noresizerxp	"Ocultar o Redimensionamento (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Open additional location bar: Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Menu do Painel: Ocultar Rótulos do Botão">
