--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Getting started">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "Z">
+<!ENTITY forwardCmd.accesskey         "V">
+<!ENTITY reloadCmd.accesskey          "O">
+<!ENTITY stopCmd.accesskey            "a">
+<!ENTITY bookmarkPageCmd2.accesskey   "d">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
