--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"θ">
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "Π">
+<!ENTITY forwardCmd.accesskey         "Μ">
+<!ENTITY reloadCmd.accesskey          "ν">
+<!ENTITY stopCmd.accesskey            "Δ">
+<!ENTITY bookmarkPageCmd2.accesskey   "σ">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
