--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Pour commencer">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "d">
+<!ENTITY forwardCmd.accesskey         "a">
+<!ENTITY reloadCmd.accesskey          "c">
+<!ENTITY stopCmd.accesskey            "r">
+<!ENTITY bookmarkPageCmd2.accesskey   "M">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
