--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "Z">
+<!ENTITY forwardCmd.accesskey         "V">
+<!ENTITY reloadCmd.accesskey          "N">
+<!ENTITY stopCmd.accesskey            "S">
+<!ENTITY bookmarkPageCmd2.accesskey   "L">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
