--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -280,6 +280,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Pierwsze kroki">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "W">
+<!ENTITY forwardCmd.accesskey         "p">
+<!ENTITY reloadCmd.accesskey          "O">
+<!ENTITY stopCmd.accesskey            "Z">
+<!ENTITY bookmarkPageCmd2.accesskey   "D">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
