--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Начало работы">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "Н">
+<!ENTITY forwardCmd.accesskey         "в">
+<!ENTITY reloadCmd.accesskey          "н">
+<!ENTITY stopCmd.accesskey            "т">
+<!ENTITY bookmarkPageCmd2.accesskey   "б">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
