--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey "Z">
 <!ENTITY appMenuGettingStarted.label "Začetek">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "N">
+<!ENTITY forwardCmd.accesskey         "p">
+<!ENTITY reloadCmd.accesskey          "P">
+<!ENTITY stopCmd.accesskey            "s">
+<!ENTITY bookmarkPageCmd2.accesskey   "m">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
