--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -279,6 +279,13 @@
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Başlarken">
 
+<!-- For page context entries. Have to be adjusted for every locale! -->
+<!ENTITY backCmd.accesskey            "i">
+<!ENTITY forwardCmd.accesskey         "r">
+<!ENTITY reloadCmd.accesskey          "z">
+<!ENTITY stopCmd.accesskey            "D">
+<!ENTITY bookmarkPageCmd2.accesskey   "m">
+
 <!-- Fallback entities. Leave empty! -->
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
